fix horizontal scroll on page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
  body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 #root {
   margin-top: auto;
